--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "llmvm-cli"
-version = "0.7.7"
+version = "0.7.8"
 description = "Command Line LLM with client-side tools support."
 authors = ["9600 devs <contact@9600.dev>"]
 readme = "README.md"
@@ -136,6 +136,8 @@ httpx = "0.25.2"
 langchain-huggingface = "^0.0.3"
 matplotlib = "^3.9.0"
 dateparser = "^1.2.0"
+gspread = "^6.1.3"
+gspread-dataframe = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core"]
