--- a/requirements.txt
+++ b/requirements.txt
@@ -41,13 +41,16 @@ google-api-core==2.19.2 ; python_version >= "3.10" and python_version < "4.0"
 google-api-core[grpc]==2.19.2 ; python_version >= "3.10" and python_version < "4.0"
 google-api-python-client==2.146.0 ; python_version >= "3.10" and python_version < "4.0"
 google-auth-httplib2==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
+google-auth-oauthlib==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
 google-auth==2.34.0 ; python_version >= "3.10" and python_version < "4.0"
 google-generativeai==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
 googleapis-common-protos==1.65.0 ; python_version >= "3.10" and python_version < "4.0"
 googlesearch-python==1.2.5 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
-grpcio-status==1.62.3 ; python_version < "4.0" and python_version >= "3.10"
+grpcio-status==1.62.3 ; python_version >= "3.10" and python_version < "4.0"
 grpcio==1.66.1 ; python_version >= "3.10" and python_version < "4.0"
+gspread-dataframe==4.0.0 ; python_version >= "3.10" and python_version < "4.0"
+gspread==6.1.3 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.10" and python_version < "4.0"
 httpcore==1.0.5 ; python_version >= "3.10" and python_version < "4.0"
@@ -95,6 +98,7 @@ nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machi
 nvidia-nccl-cu12==2.20.5 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-nvjitlink-cu12==12.6.68 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "4.0"
 openai==1.46.0 ; python_version >= "3.10" and python_version < "4.0"
 orjson==3.10.7 ; python_version >= "3.10" and python_version < "4.0"
 packaging==24.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -128,6 +132,7 @@ python-multipart==0.0.9 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2024.2 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.10" and python_version < "4.0"
 regex==2024.9.11 ; python_version >= "3.10" and python_version < "4.0"
+requests-oauthlib==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
 rich==13.8.1 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
