--- a/llmvm/config.yaml
+++ b/llmvm/config.yaml
@@ -17,11 +17,13 @@ openai_api_base: 'https://api.openai.com/v1'
 anthropic_api_base: 'https://api.anthropic.com'
 deepseek_api_base: 'https://api.deepseek.com/v1'
 gemini_api_base: 'https://generativelanguage.googleapis.com/v1beta'
+bedrock_api_base: 'us-east-1'
 default_openai_model: 'gpt-4o'
 default_anthropic_model: 'claude-3-5-sonnet-latest'
 default_gemini_model: 'gemini-2.0-flash-exp'
 default_deepseek_model: 'deepseek-chat'
-executor: 'openai'  # openai, anthropic, gemini, deepseek
+default_bedrock_model: 'amazon.nova-pro-v1:0'
+executor: 'openai'  # openai, anthropic, gemini, deepseek, bedrock
 override_max_input_tokens: None
 override_max_output_tokens: None
 helper_functions:
