--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiofiles==23.2.1 ; python_version >= "3.11" and python_version < "4.0"
 aiohappyeyeballs==2.6.1 ; python_version >= "3.11" and python_version < "4.0"
 aiohttp==3.12.13 ; python_version >= "3.11" and python_version < "4.0"
-aiosignal==1.3.2 ; python_version >= "3.11" and python_version < "4.0"
+aiosignal==1.4.0 ; python_version >= "3.11" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
 anthropic==0.49.0 ; python_version >= "3.11" and python_version < "4.0"
 anyio==4.9.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -9,8 +9,8 @@ astunparse==1.6.3 ; python_version >= "3.11" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.11" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.11" and python_version < "4.0"
 beautifulsoup4==4.13.4 ; python_version >= "3.11" and python_version < "4.0"
-boto3==1.38.41 ; python_version >= "3.11" and python_version < "4.0"
-botocore==1.38.41 ; python_version >= "3.11" and python_version < "4.0"
+boto3==1.39.3 ; python_version >= "3.11" and python_version < "4.0"
+botocore==1.39.3 ; python_version >= "3.11" and python_version < "4.0"
 bs4==0.0.2 ; python_version >= "3.11" and python_version < "4.0"
 cachetools==5.5.2 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2024.12.14 ; python_version >= "3.11" and python_version < "4.0"
@@ -24,14 +24,14 @@ cryptography==44.0.3 ; python_version >= "3.11" and python_version < "4.0"
 curl-cffi==0.11.4 ; python_version >= "3.11" and python_version < "4.0"
 cycler==0.12.1 ; python_version >= "3.11" and python_version < "4.0"
 dataclasses-json==0.6.7 ; python_version >= "3.11" and python_version < "4.0"
-dateparser==1.2.1 ; python_version >= "3.11" and python_version < "4.0"
+dateparser==1.2.2 ; python_version >= "3.11" and python_version < "4.0"
 dill==0.3.9 ; python_version >= "3.11" and python_version < "4.0"
 distro==1.9.0 ; python_version >= "3.11" and python_version < "4.0"
 docstring-parser==0.16 ; python_version >= "3.11" and python_version < "4.0"
 exceptiongroup==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
-fastapi==0.115.13 ; python_version >= "3.11" and python_version < "4.0"
+fastapi==0.115.14 ; python_version >= "3.11" and python_version < "4.0"
 filelock==3.18.0 ; python_version >= "3.11" and python_version < "4.0"
-fonttools==4.58.4 ; python_version >= "3.11" and python_version < "4.0"
+fonttools==4.58.5 ; python_version >= "3.11" and python_version < "4.0"
 frozendict==2.4.6 ; python_version >= "3.11" and python_version < "4.0"
 frozenlist==1.7.0 ; python_version >= "3.11" and python_version < "4.0"
 fsspec==2024.12.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -39,16 +39,16 @@ google-auth-oauthlib==1.2.2 ; python_version >= "3.11" and python_version < "4.0
 google-auth==2.40.3 ; python_version >= "3.11" and python_version < "4.0"
 googlesearch-python==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 greenlet==3.2.3 ; python_version >= "3.11" and python_version < "4.0"
-grpcio==1.73.0 ; python_version >= "3.11" and python_version < "4.0"
+grpcio==1.73.1 ; python_version >= "3.11" and python_version < "4.0"
 gspread-dataframe==4.0.0 ; python_version >= "3.11" and python_version < "4.0"
 gspread==6.2.1 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.16.0 ; python_version >= "3.11" and python_version < "4.0"
 hf-xet==1.1.5 ; python_version >= "3.11" and python_version < "4.0" and (platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "arm64" or platform_machine == "aarch64")
 html5lib==1.1 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.9 ; python_version >= "3.11" and python_version < "4.0"
-httpx-sse==0.4.0 ; python_version >= "3.11" and python_version < "4.0"
+httpx-sse==0.4.1 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.28.1 ; python_version >= "3.11" and python_version < "4.0"
-huggingface-hub==0.33.0 ; python_version >= "3.11" and python_version < "4.0"
+huggingface-hub==0.33.2 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.11" and python_version < "4.0"
 jinja2==3.1.6 ; python_version >= "3.11" and python_version < "4.0"
 jiter==0.10.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -57,6 +57,8 @@ joblib==1.5.1 ; python_version >= "3.11" and python_version < "4.0"
 jsonpatch==1.33 ; python_version >= "3.11" and python_version < "4.0"
 jsonpickle==3.4.2 ; python_version >= "3.11" and python_version < "4.0"
 jsonpointer==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
+jsonschema-specifications==2025.4.1 ; python_version >= "3.11" and python_version < "4.0"
+jsonschema==4.24.0 ; python_version >= "3.11" and python_version < "4.0"
 kiwisolver==1.4.8 ; python_version >= "3.11" and python_version < "4.0"
 lxml==5.4.0 ; python_version >= "3.11" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -65,10 +67,10 @@ markdownify==0.12.1 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "4.0"
 marshmallow==3.26.1 ; python_version >= "3.11" and python_version < "4.0"
 matplotlib==3.10.3 ; python_version >= "3.11" and python_version < "4.0"
-mcp==1.9.4 ; python_version >= "3.11" and python_version < "4.0"
+mcp==1.10.1 ; python_version >= "3.11" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
-multidict==6.5.0 ; python_version >= "3.11" and python_version < "4.0"
+multidict==6.6.3 ; python_version >= "3.11" and python_version < "4.0"
 multitasking==0.0.11 ; python_version >= "3.11" and python_version < "4.0"
 mypy-extensions==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
 nest-asyncio==1.6.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -76,7 +78,7 @@ networkx==3.5 ; python_version >= "3.11" and python_version < "4.0"
 numpy-financial==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 numpy==1.26.4 ; python_version >= "3.11" and python_version < "4.0"
 oauthlib==3.3.1 ; python_version >= "3.11" and python_version < "4.0"
-openai==1.90.0 ; python_version >= "3.11" and python_version < "4.0"
+openai==1.93.0 ; python_version >= "3.11" and python_version < "4.0"
 orjson==3.10.18 ; python_version >= "3.11" and python_version < "4.0"
 packaging==25.0 ; python_version >= "3.11" and python_version < "4.0"
 pandas==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -95,7 +97,7 @@ pyasn1-modules==0.4.2 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.6.1 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-core==2.33.2 ; python_version >= "3.11" and python_version < "4.0"
-pydantic-settings==2.10.0 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-settings==2.10.1 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.11.7 ; python_version >= "3.11" and python_version < "4.0"
 pyee==12.1.1 ; python_version >= "3.11" and python_version < "4.0"
 pygments==2.19.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -106,19 +108,21 @@ pyperclip==1.9.0 ; python_version >= "3.11" and python_version < "4.0"
 pyte==0.8.2 ; python_version >= "3.11" and python_version < "4.0"
 pytesseract==0.3.13 ; python_version >= "3.11" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "4.0"
-python-dotenv==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
+python-dotenv==1.1.1 ; python_version >= "3.11" and python_version < "4.0"
 python-multipart==0.0.20 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2024.2 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.11" and python_version < "4.0"
+referencing==0.36.2 ; python_version >= "3.11" and python_version < "4.0"
 regex==2024.11.6 ; python_version >= "3.11" and python_version < "4.0"
 requests-oauthlib==2.0.0 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.32.4 ; python_version >= "3.11" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.11" and python_version < "4.0"
+rpds-py==0.26.0 ; python_version >= "3.11" and python_version < "4.0"
 rsa==4.9.1 ; python_version >= "3.11" and python_version < "4.0"
 s3transfer==0.13.0 ; python_version >= "3.11" and python_version < "4.0"
 safetensors==0.4.5 ; python_version >= "3.11" and python_version < "4.0"
 scikit-learn==1.7.0 ; python_version >= "3.11" and python_version < "4.0"
-scipy==1.15.3 ; python_version >= "3.11" and python_version < "4.0"
+scipy==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 sec-api==1.0.32 ; python_version >= "3.11" and python_version < "4.0"
 serpapi==0.1.5 ; python_version >= "3.11" and python_version < "4.0"
 six==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -131,10 +135,10 @@ sympy==1.14.0 ; python_version >= "3.11" and python_version < "4.0"
 tenacity==8.5.0 ; python_version >= "3.11" and python_version < "4.0"
 threadpoolctl==3.6.0 ; python_version >= "3.11" and python_version < "4.0"
 tiktoken==0.9.0 ; python_version >= "3.11" and python_version < "4.0"
-tokenizers==0.21.1 ; python_version >= "3.11" and python_version < "4.0"
+tokenizers==0.21.2 ; python_version >= "3.11" and python_version < "4.0"
 tqdm==4.67.1 ; python_version >= "3.11" and python_version < "4.0"
-transformers==4.52.4 ; python_version >= "3.11" and python_version < "4.0"
-typing-extensions==4.14.0 ; python_version >= "3.11" and python_version < "4.0"
+transformers==4.53.1 ; python_version >= "3.11" and python_version < "4.0"
+typing-extensions==4.14.1 ; python_version >= "3.11" and python_version < "4.0"
 typing-inspect==0.9.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-inspection==0.4.1 ; python_version >= "3.11" and python_version < "4.0"
 tzdata==2024.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -146,4 +150,4 @@ webencodings==0.5.1 ; python_version >= "3.11" and python_version < "4.0"
 websockets==15.0.1 ; python_version >= "3.11" and python_version < "4.0"
 wheel==0.43.0 ; python_version >= "3.11" and python_version < "4.0"
 yarl==1.20.1 ; python_version >= "3.11" and python_version < "4.0"
-yfinance==0.2.63 ; python_version >= "3.11" and python_version < "4.0"
+yfinance==0.2.64 ; python_version >= "3.11" and python_version < "4.0"
